<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/ask_to_exit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya"
        android:layout_below="@id/tv_exit"
        android:layout_marginStart="115dp"
        android:textColor="#ffffff"
        android:background="@drawable/button_style"/>
    <Button
        android:id="@+id/btn_no"
        android:layout_toEndOf="@id/btn_yes"
        android:layout_below="@id/tv_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@drawable/button_style_red"/>

</RelativeLayout>